--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -13,13 +13,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Set up JDK 11
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y openjdk-11-jdk
+  #    - name: Set up JDK 11
+  #      run: |
+  #        sudo apt-get update
+  #        sudo apt-get install -y openjdk-11-jdk
 
-      - name: Build with Gradle
-        run: ./gradlew build
+  #    - name: Build with Gradle
+  #      run: ./gradlew build
 
       - name: Install Docker
         run: |
@@ -32,7 +32,7 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t gcr.io/<PROJECT-ID>/<IMAGE-NAME>:latest .
+          docker build -t gcr.io/durable-catbird-340811/sample:latest .
 
       - name: Configure Docker authentication
         run: |
@@ -42,4 +42,4 @@ jobs:
 
       - name: Push Docker image to GCR
         run: |
-          docker push gcr.io/<PROJECT-ID>/<IMAGE-NAME>:latest
+          docker push gcr.io/durable-catbird-340811/sample:latest
