--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -33,12 +33,18 @@ jobs:
       - name: Build Docker image
         run: |
           docker build -t gcr.io/durable-catbird-340811/sample:latest .
+      - name: Install Google Cloud SDK
+        run: |
+          export CLOUD_SDK_REPO="cloud-sdk-$(lsb_release -c -s)"
+          echo "deb http://packages.cloud.google.com/apt $CLOUD_SDK_REPO main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
+          curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
+          sudo apt-get update && sudo apt-get install -y google-cloud-sdk
 
       - name: Configure Docker authentication
         run: |
           echo ${{ secrets.GCP_SA_KEY }} | base64 --decode > key.json
           gcloud auth activate-service-account --key-file=key.json
-       #   gcloud auth configure-docker gcr.io
+          gcloud auth configure-docker gcr.io
 
       - name: Push Docker image to GCR
         run: |
