--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-and-deploy:
-    runs-on: ubuntu-latest
+    runs-on: google/cloud-sdk:latest
 
     steps:
       - name: Checkout code
@@ -21,14 +21,14 @@ jobs:
   #    - name: Build with Gradle
   #      run: ./gradlew build
 
-      - name: Install Docker
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y apt-transport-https ca-certificates curl gnupg lsb-release
-          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
-          echo "deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
-          sudo apt-get update
-          sudo apt-get install -y docker-ce docker-ce-cli containerd.io
+   #   - name: Install Docker
+   #     run: |
+   #       sudo apt-get update
+   #       sudo apt-get install -y apt-transport-https ca-certificates curl gnupg lsb-release
+   #       curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+   #       echo "deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+   #       sudo apt-get update
+   #       sudo apt-get install -y docker-ce docker-ce-cli containerd.io
 
       - name: Build Docker image
         run: |
@@ -40,16 +40,12 @@ jobs:
  #         curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
  #         sudo apt-get update && sudo apt-get install -y google-cloud-sdk
 
-  #    - name: Configure Docker authentication
-  #      run: |
-  #        echo ${{ secrets.GCP_SA_KEY }} | base64 --decode > key.json
-  #        gcloud auth activate-service-account --key-file=key.json
-  #        gcloud auth configure-docker gcr.io
       - name: Configure Docker authentication
         run: |
           echo ${{ secrets.GCP_SA_KEY }} | base64 --decode > key.json
-          docker run -v $PWD:/workspace -w /workspace --entrypoint gcloud google/cloud-sdk auth activate-service-account --key-file=/workspace/key.json
-          docker run -v $PWD:/workspace -w /workspace --entrypoint gcloud google/cloud-sdk auth configure-docker gcr.io
+          gcloud auth activate-service-account --key-file=key.json
+          gcloud auth configure-docker gcr.io
+
 
       - name: Push Docker image to GCR
         run: |
