--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -13,6 +13,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Install Google Cloud SDK
+        run: |
+          sudo apt-get install apt-transport-https ca-certificates gnupg curl sudo
+          echo "deb [signed-by=/usr/share/keyrings/cloud.google.asc] https://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
+          curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
+          sudo apt-get update && sudo apt-get install google-cloud-cli
+          gcloud init
+
   #    - name: Set up JDK 11
   #      run: |
   #        sudo apt-get update
@@ -21,21 +29,20 @@ jobs:
   #    - name: Build with Gradle
   #      run: ./gradlew build
 
-   #   - name: Install Docker
-   #     run: |
-   #       sudo apt-get update
-   #       sudo apt-get install -y apt-transport-https ca-certificates curl gnupg lsb-release
-   #       curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
-   #       echo "deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
-   #       sudo apt-get update
-   #       sudo apt-get install -y docker-ce docker-ce-cli containerd.io
+      - name: Install Docker
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y apt-transport-https ca-certificates curl gnupg lsb-release
+          curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
+          echo "deb [arch=amd64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+          sudo apt-get update
+          sudo apt-get install -y docker-ce docker-ce-cli containerd.io
 
       - name: Build Docker image
         run: |
           docker build -t gcr.io/durable-catbird-340811/sample:latest .
- #     - name: Install Google Cloud SDK
- #       run: |
- #         export CLOUD_SDK_REPO="cloud-sdk-$(lsb_release -c -s)"
+
+#         export CLOUD_SDK_REPO="cloud-sdk-$(lsb_release -c -s)"
  #         echo "deb http://packages.cloud.google.com/apt $CLOUD_SDK_REPO main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
  #         curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
  #         sudo apt-get update && sudo apt-get install -y google-cloud-sdk
