--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -15,11 +15,8 @@ jobs:
 
       - name: Install Google Cloud SDK
         run: |
-          sudo apt-get install apt-transport-https ca-certificates gnupg curl sudo
-          echo "deb [signed-by=/usr/share/keyrings/cloud.google.asc] https://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
-          curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
-          sudo apt-get update && sudo apt-get install google-cloud-cli
-          gcloud init
+          curl https://sdk.cloud.google.com > install.sh
+          bash install.sh --disable-prompts
 
   #    - name: Set up JDK 11
   #      run: |
