--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -17,6 +17,12 @@ jobs:
         run: |
           curl https://sdk.cloud.google.com > install.sh
           bash install.sh --disable-prompts
+          gcloud init
+      - name: Configure Docker authentication
+        run: |
+          echo ${{ secrets.GCP_SA_KEY }} | base64 --decode > key.json
+          gcloud auth activate-service-account --key-file=key.json
+          gcloud auth configure-docker gcr.io
 
   #    - name: Set up JDK 11
   #      run: |
@@ -44,11 +50,7 @@ jobs:
  #         curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
  #         sudo apt-get update && sudo apt-get install -y google-cloud-sdk
 
-      - name: Configure Docker authentication
-        run: |
-          echo ${{ secrets.GCP_SA_KEY }} | base64 --decode > key.json
-          gcloud auth activate-service-account --key-file=key.json
-          gcloud auth configure-docker gcr.io
+
 
 
       - name: Push Docker image to GCR
