--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -17,10 +17,9 @@ jobs:
         run: |
           curl https://sdk.cloud.google.com > install.sh
           bash install.sh --disable-prompts
-          gcloud init --skip-diagnostics
+      #    gcloud init --skip-diagnostics
       - name: Configure Docker authentication
         run: |
-          echo ${{ secrets.GCP_SA_KEY }} | base64 --decode > key.json
           gcloud auth activate-service-account --key-file=key.json
           gcloud auth configure-docker gcr.io
 
