--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -42,16 +42,18 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t gcr.io/durable-catbird-340811/sample:latest .
-
-#         export CLOUD_SDK_REPO="cloud-sdk-$(lsb_release -c -s)"
- #         echo "deb http://packages.cloud.google.com/apt $CLOUD_SDK_REPO main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
- #         curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key --keyring /usr/share/keyrings/cloud.google.gpg add -
- #         sudo apt-get update && sudo apt-get install -y google-cloud-sdk
-
-
-
+          IMAGE_TAG=$(git rev-parse --short HEAD)
+          docker build -t gcr.io/durable-catbird-340811/sample:$IMAGE_TAG .
 
       - name: Push Docker image to GCR
         run: |
-          docker push gcr.io/durable-catbird-340811/sample:latest
+          IMAGE_TAG=$(git rev-parse --short HEAD)
+          docker push gcr.io/durable-catbird-340811/sample:$IMAGE_TAG
+      - name: Deploy Docker image to Cloud Run
+        run: |
+          IMAGE_TAG=$(git rev-parse --short HEAD)
+          gcloud run deploy sample \
+            --image gcr.io/durable-catbird-340811/sample:$IMAGE_TAG \
+            --platform managed \
+            --region us-central1 \
+            --allow-unauthenticated
